err/arraymanagement.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/arraymanagement'...
Compiling './lib/python3.5/site-packages/arraymanagement/default_loader.py'...
***   File "./lib/python3.5/site-packages/arraymanagement/default_loader.py", line 51
    raise ArrayManagementException, 'multile files matching %s: %s' % (key, str(files))
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/arraymanagement/nodes'...
Compiling './lib/python3.5/site-packages/arraymanagement/nodes/dirnodes.py'...
***   File "./lib/python3.5/site-packages/arraymanagement/nodes/dirnodes.py", line 57
    raise ArrayManagementException, 'multile files matching %s: %s' % (key, str(files))
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arraymanagement/nodes/hdfnodes.py'...
***   File "./lib/python3.5/site-packages/arraymanagement/nodes/hdfnodes.py", line 77
    raise Exception, "node does not have a table in it"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arraymanagement/nodes/sqlcaching.py'...
***   File "./lib/python3.5/site-packages/arraymanagement/nodes/sqlcaching.py", line 538
    print 'something terrible has gone wrong'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/arraymanagement-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
